# grease

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .hlint.yaml  AGENTS.md  Dockerfile  README.md  cabal.project  fourmolu.yaml  grease.cabal  lint  lun.toml  sort.py
doc/diagrams/: LICENSE  grease-diagrams.cabal
doc/diagrams/app/: Main.hs
elf-edit-core-dump/: .gitignore  LICENSE  README.md  elf-edit-core-dump.cabal
elf-edit-core-dump/extract-core-dump/: Main.hs
elf-edit-ecfs/: LICENSE  README.md  elf-edit-ecfs.cabal
elf-edit-ecfs/test/: Golden.hs
elf-edit-ecfs/test/golden/: readecfs-auxv.out  readecfs-ecfs.out  readecfs-ehdr.out  readecfs-gotinfo.out  readecfs-libnames.out  readecfs-personality.out  readecfs-phdrs.out  readecfs-shdrs.out  readecfs-symbols.out
elf-edit-ecfs/tools/: EtFlip.hs  ReadEcfs.hs
grease/: README.md  grease.cabal
grease-cli/: .crucible-debug  README.md  grease-cli.cabal
grease-cli/main/: Main.hs
grease-cli/src/Grease/: Cli.hs  Main.hs  Version.hs
grease-cli/tests/: Main.hs  Makefile  Shape.hs  extract-cflags.py  extract-cflags.sh  test.lua
grease-cli/tests/arm/: declare-in-override.armv7l.cbl  declare-in-override.config  htons.armv7l.cbl  id.armv7l.cbl  startup-override.armv7l.cbl  startup-override.config  user-override.armv7l.cbl  user-override.config
grease-cli/tests/llvm/: T247-cex-print-wrong-order.llvm.cbl  abort.llvm.cbl  assume.llvm.cbl  both-branches-abort.llvm.cbl  branch-fresh-bytes.llvm.cbl  close-stdin.llvm.cbl  conc-fs.llvm.cbl  conc.llvm.cbl  declare-in-override.config  declare-in-override.llvm.cbl  double-free.llvm.cbl  empty.llvm.cbl  exit.llvm.cbl  free-non-ptr.llvm.cbl  free-stack.llvm.cbl  free.llvm.cbl  fresh-vec.llvm.cbl  func-ptr-error.llvm.cbl  func-ptr.llvm.cbl  id-bool.llvm.cbl  io-overrides-fs.llvm.cbl  load.llvm.cbl  malloc.llvm.cbl  memcpy.llvm.cbl  memset-large-const-len.llvm.cbl  memset.llvm.cbl  null-read.llvm.cbl  null-write.llvm.cbl  ptr-add-large-offset.llvm.cbl  ptr-add-offset.llvm.cbl  recv-fresh-bytes-multi-bytes.llvm.cbl  recv-fresh-bytes.llvm.cbl  rust-enum.llvm.cbl  simple-shapes.llvm.cbl  skip-ptr.llvm.cbl  skip-void.llvm.cbl  startup-override.config  startup-override.llvm.cbl  store.llvm.cbl  string-overrides.llvm.cbl  (+9 more)
grease-cli/tests/llvm-bc/: arg-di-types.bc  arg-di-types.c  declare-in-override.c  declare-in-override.config  load-handle.bc  load-handle.c  load-handle.config  malloc-free-redefined.c  memset.bc  memset.c  multiple-defines.c  skip.c  skip.ll  startup-override.c  startup-override.config
grease-cli/tests/ppc32/: declare-in-override.config  declare-in-override.ppc32.cbl  id.ppc32.cbl  pos-stack-offset-read.ppc32.cbl  pos-stack-offset-write.ppc32.cbl  startup-override.config  startup-override.ppc32.cbl  user-override.config  user-override.ppc32.cbl
grease-cli/tests/ux/: addr-override-bad-address.lua  cfg-bad-sig.x64.cbl  json-shapes-bad.llvm.cbl  overrides-yaml-bad-key.x64.cbl  overrides-yaml-empty.x64.cbl
grease-cli/tests/x86/: T247-cex-print-wrong-order.x64.cbl  T279-must-fail-false-pos.x64.cbl  aliased-pointer-shape.x64.cbl  declare-in-override.config  declare-in-override.x64.cbl  id.x64.cbl  json-shapes.x64.cbl  memshape-ptr-offset.x64.cbl  null-read.x64.cbl  null-write.x64.cbl  pos-stack-offset-read.x64.cbl  pos-stack-offset-write.x64.cbl  recv-fresh-bytes.x64.cbl  startup-override.config  startup-override.x64.cbl  user-override.config  user-override.x64.cbl  write-to-fixed-address-in-memory.x64.cbl  write-to-fixed-address-in-rax.x64.cbl  write-to-rax-pointer.x64.cbl
grease-exe/: LICENSE  README.md  grease-exe.cabal
grease-exe/src/Grease/: Main.hs
grease-exe/tests/: .envrc  Main.hs  Makefile  Shape.hs  docker-compose.yml  extract-cflags.py  flake.nix  test.lua
grease-exe/tests/arm/: declare-in-override.armv7l.cbl  fresh-bytes.armv7l.cbl  user-override.armv7l.cbl
grease-exe/tests/llvm/: T247-cex-print-wrong-order.llvm.cbl  abort.llvm.cbl  arg-str.llvm.cbl  arg-sym-str.llvm.cbl  assume.llvm.cbl  both-branches-abort.llvm.cbl  close-stdin.llvm.cbl  conc-bv-fresh-bytes.llvm.cbl  conc-fs.llvm.cbl  conc-overrides.llvm.cbl  dfs-true-branch-bug.llvm.cbl  double-free.llvm.cbl  empty.llvm.cbl  exit.llvm.cbl  free-non-ptr.llvm.cbl  free-stack.llvm.cbl  free.llvm.cbl  fresh-bytes.llvm.cbl  func-ptr.llvm.cbl  io-overrides-fs.llvm.cbl  io-overrides.llvm.cbl  load.llvm.cbl  malloc.llvm.cbl  (+21 more)
grease-exe/tests/llvm-bc/: 508-builtin-ptr.bc  508-builtin-ptr.c  arg-di-types.c  declare-in-override.bc  load-handle.c  malloc-free-redefined.bc  multiple-defines.c  skip.c
grease/benchmarks/: bench.py  crc32-rodata.c  crc32-runtime.c  libpng-cve-2013-6954.c
grease/tests/: Makefile  Shape.hs
screach/: Dockerfile  LICENSE  README.md  screach.cabal
screach/app/: Main.hs
screach/directed-test-data/: .gitignore  Makefile  avoid-addr.c  avoid-addr.elf  avoid-addr.tsv  do-not-return-to-same-block.c  do-not-return-to-same-block.elf  do-not-return-to-same-block.tsv
screach/doc/: SUMMARY.md  book.toml  builtins.md  dev.md  install.md  overrides.md  overview.md  sexp.md  tests.md  usage.md
screach/ghidra/: .gitignore  README.md  build.gradle  extension.properties  settings.gradle  shell.nix
screach/src/: Screach.hs
screach/test/: DistTest.hs  DistTestSuite.hs  Test.hs  test.lua
screach/test-data/: Makefile  aborted-path-log.cbl  b64.c  b64.elf  conc-fs.cbl  debug.lua  ecfs.lua  extract-cflags.py  fig2-sdse-cg.csv  fig2-sdse.c  fig2-sdse.elf  global.c  global.elf  id.cbl  load-from-large-offset.cbl  loop-bound-reach.cbl  loop.cbl  musl-gcc-docker.sh  never-reachable.cbl  ov-local-fun-target.c  ov-local-fun-target.elf  reached-loop-bound.cbl  reached-recursion-limit.cbl  recursion-limit-reach.cbl  recv-fresh-bytes.cbl  sometimes-reachable.cbl  tgt-ov-interesting.lua  tgt-ov.lua  timeout.cbl  zlib-cve-2022-37434.c  zlib-cve-2022-37434.elf
screach/test-distance/: .gitignore  Makefile  README.md  dist-test-cg.csv  dist-test.c  tail-call-return-through-test-cg.csv  tail-call-return-through-test.c
screach/test-gen/: .dockerignore  Dockerfile  README.md
(+1040 files in other folders)
