cabal-version: 3.0
name: grease-exe
version: 0.1.0.0
author: Galois, Inc.
maintainer: grease@galois.com
copyright: Galois, Inc. 2024
license: BSD-3-Clause
license-file: LICENSE
synopsis:
  Checks properties about binaries using under-constrained symbolic execution
description:
  @grease@ is a tool that checks properties about binaries using
  under-constrained symbolic execution.
extra-doc-files:
  README.md
extra-source-files:
  tests/test.lua
category: Static Analysis

source-repository head
  type: git
  location: https://github.com/GaloisInc/grease
  subdir: grease-exe

common shared
  default-language: GHC2021
  build-depends: base >= 4.17 && < 4.21

  -- See doc/style.md
  --
  -- We can't use `-Werror=missing...` because it interferes with ghcid.
  -- We can't use `-Werror=prepositive...` because of ndmitchell/ghcid#358.
  ghc-options:
    -Wmissing-export-lists
    -Wprepositive-qualified-module

  -- Specifying -Wall and -Werror can cause the project to fail to build on
  -- newer versions of GHC simply due to new warnings being added to -Wall. To
  -- prevent this from happening we manually list which warnings should be
  -- considered errors. We also list some warnings that are not in -Wall, though
  -- try to avoid "opinionated" warnings (though this judgement is clearly
  -- subjective).
  --
  -- Warnings are grouped by the GHC version that introduced them, and then
  -- alphabetically.
  --
  -- A list of warnings and the GHC version in which they were introduced is
  -- available here:
  -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html

  -- Since GHC 9.6 or earlier:
  ghc-options:
    -Wall
    -Werror=ambiguous-fields
    -Werror=compat-unqualified-imports
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=deriving-typeable
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=gadt-mono-local-binds
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=misplaced-pragmas
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=missing-pattern-synonym-signatures
    -Werror=missing-signatures
    -Werror=name-shadowing
    -Werror=noncanonical-monad-instances
    -Werror=noncanonical-monoid-instances
    -Werror=operator-whitespace
    -Werror=operator-whitespace-ext-conflict
    -Werror=orphans
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=redundant-bang-patterns
    -Werror=redundant-record-wildcards
    -Werror=redundant-strictness-flags
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=star-is-type
    -Werror=tabs
    -Werror=type-defaults
    -Werror=typed-holes
    -Werror=type-equality-out-of-scope
    -Werror=type-equality-requires-operators
    -Werror=unicode-bidirectional-format-characters
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-do-bind
    -Werror=unused-imports
    -Werror=unused-record-wildcards
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind

  if impl(ghc < 9.8)
    ghc-options:
      -Werror=forall-identifier

  if impl(ghc >= 9.8)
    ghc-options:
      -Werror=incomplete-export-warnings
      -Werror=inconsistent-flags

  if impl(ghc >= 9.10)
    ghc-options:
      -Werror=badly-staged-types
      -Werror=data-kinds-tc
      -Werror=incomplete-record-selectors

  -- -XTypeAbstractions was added in GHC 9.8, so we can't fix this warning until
  -- we support GHC 9.12 and drop GHC 9.6.
  if impl(ghc == 9.10)
    ghc-options:
      -Wno=deprecated-type-abstractions

  -- TODO(#334): Enable these warnings when supporting these GHC versions.
  -- if impl(ghc >= 9.12)
  --   -Werror=deprecated-type-abstractions
  --   -Werror=view-pattern-signatures

library
  import: shared
  hs-source-dirs: src
  build-depends:
    , grease
    , grease-aarch32
    , grease-cli
    , grease-ppc
    , grease-x86

    -- Hackage dependencies
    , aeson ^>= 2.2
    , async ^>= 2.2.5
    , bytestring ^>= { 0.11.5, 0.12.1 }
    , containers ^>= { 0.6.7, 0.7 }
    , directory ^>= 1.3.7.1
    , file-embed ^>= 0.0.16
    , filepath ^>= { 1.4.2.2, 1.5.4.0 }
    , indexed-traversable ^>= { 0.1.4 }
    , lens ^>= 5.3
    , lumberjack ^>= 1.0
    , megaparsec ^>= 9.6
    , optparse-applicative ^>= 0.19.0.0
    , panic ^>= 0.4
    , safe-exceptions ^>= 0.1.7.4
    , text ^>= { 2.0, 2.1 }
    , vector ^>= 0.13.2
    , prettyprinter ^>= 1.7.1
    , parameterized-utils ^>= 2.1.10

    -- Submodules
    --
    -- No version bounds are needed, as Cabal will always choose the versions
    -- specified in `cabal.project`, namely, the version in the submodule.
    , crucible
    , crucible-debug
    , crucible-llvm
    , crucible-llvm-debug
    , crucible-llvm-syntax
    , crucible-macaw-debug
    , crucible-symio
    , crucible-syntax
    , elf-edit
    , llvm-pretty
    , llvm-pretty-bc-parser
    , macaw-aarch32
    , macaw-aarch32-symbolic
    , macaw-aarch32-syntax
    , macaw-base
    , macaw-loader
    , macaw-loader-aarch32
    , macaw-loader-x86
    , macaw-ppc
    , macaw-ppc-symbolic
    , macaw-ppc-syntax
    , macaw-symbolic
    , macaw-symbolic-syntax
    , macaw-x86
    , macaw-x86-symbolic
    , macaw-x86-syntax
    , stubs-common
    , what4

  exposed-modules:
    Grease.Main

  other-modules:
    Grease.Profiler.EmbeddedData
    Grease.Profiler.Feature
    Grease.Profiler.Paths

executable grease
  import: shared
  hs-source-dirs: main
  main-is: Main.hs
  build-depends: grease-exe

test-suite grease-tests
  import: shared
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Shape
  build-depends:
      grease-exe
    , grease
    , grease-cli

    -- Hackage dependencies
    , bv-sized ^>= 1.0.6
    , bytestring ^>= { 0.11.5, 0.12.1 }
    , containers ^>= { 0.6.7, 0.7 }
    , directory ^>= 1.3.7.1
    , file-embed ^>= 0.0.16
    , filepath ^>= { 1.4.2.2, 1.5.4.0 }
    , hedgehog ^>= 1.5
    , hslua ^>= 2.3.1
    , lumberjack ^>= 1.0
    , oughta ^>= 0.3
    , parameterized-utils ^>= 2.1.10
    , prettyprinter ^>= 1.7.1
    , tasty ^>= 1.5.3
    , tasty-hedgehog ^>= 1.4.0.2
    , tasty-hunit ^>= 0.10.2
    , text ^>= { 2.0, 2.1 }

    -- Submodules
    , crucible-llvm
    , macaw-base
    , what4
