cabal-version: 3.0
name: grease
version: 0.1.0.0
author: Galois, Inc.
maintainer: grease@galois.com
copyright: Galois, Inc. 2024
license: BSD-3-Clause
license-file: LICENSE
synopsis:
  Checks properties about binaries using under-constrained symbolic execution
description:
  @grease@ is a tool that checks properties about binaries using
  under-constrained symbolic execution.
extra-doc-files:
  README.md
extra-source-files:
  grease.buildinfo.json
category: Static Analysis

source-repository head
  type: git
  location: https://github.com/GaloisInc/grease
  subdir: grease

common shared
  default-language: GHC2021
  build-depends: base >= 4.17 && < 4.20

  -- See doc/style.md
  --
  -- We can't use `-Werror=prepositive...` because of ndmitchell/ghcid#358.
  ghc-options:
    -Werror=missing-export-lists
    -Wprepositive-qualified-module

  -- Specifying -Wall and -Werror can cause the project to fail to build on
  -- newer versions of GHC simply due to new warnings being added to -Wall. To
  -- prevent this from happening we manually list which warnings should be
  -- considered errors. We also list some warnings that are not in -Wall, though
  -- try to avoid "opinionated" warnings (though this judgement is clearly
  -- subjective).
  --
  -- Warnings are grouped by the GHC version that introduced them, and then
  -- alphabetically.
  --
  -- A list of warnings and the GHC version in which they were introduced is
  -- available here:
  -- https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html

  -- Since GHC 9.4 or earlier:
  ghc-options:
    -Wall
    -Werror=ambiguous-fields
    -Werror=compat-unqualified-imports
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=deriving-typeable
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=gadt-mono-local-binds
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=misplaced-pragmas
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=missing-pattern-synonym-signatures
    -Werror=missing-signatures
    -Werror=name-shadowing
    -Werror=noncanonical-monad-instances
    -Werror=noncanonical-monoid-instances
    -Werror=operator-whitespace
    -Werror=operator-whitespace-ext-conflict
    -Werror=orphans
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=redundant-bang-patterns
    -Werror=redundant-record-wildcards
    -Werror=redundant-strictness-flags
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=star-is-type
    -Werror=tabs
    -Werror=type-defaults
    -Werror=typed-holes
    -Werror=type-equality-out-of-scope
    -Werror=type-equality-requires-operators
    -Werror=unicode-bidirectional-format-characters
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-do-bind
    -Werror=unused-imports
    -Werror=unused-record-wildcards
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind

  if impl(ghc < 9.8)
    ghc-options:
      -Werror=forall-identifier

  if impl(ghc >= 9.8)
    ghc-options:
      -Werror=incomplete-export-warnings
      -Werror=inconsistent-flags
      -Werror=missing-poly-kind-signatures

  -- TODO(#44): Enable these warnings when supporting these GHC versions.
  --
  -- if impl(ghc >= 9.10)
  --   -Werror=badly-staged-types
  --   -Werror=data-kinds-tc
  --   -Werror=deprecated-type-abstractions
  --   -Werror=incomplete-record-selectors

  -- if impl(ghc >= 9.12)
  --   -Werror=view-pattern-signatures

library
  import: shared
  hs-source-dirs: src
  build-depends:
    -- Hackage dependencies
      aeson ^>= 2.2
    , bv-sized ^>= 1.0.6
    , bytestring ^>= { 0.11.5, 0.12.1 }
    , containers ^>= 0.6.7
    , directory ^>= 1.3.7.1
    , exceptions ^>= 0.10.5
    , file-embed ^>= 0.0.16
    , filepath ^>= 1.4.2.2
    , githash ^>=0.1.7.0
    , lens ^>= 5.3
    , libBF ^>= 0.6.8
    , lumberjack ^>= 1.0
    , megaparsec ^>= 9.6
    , mtl ^>= { 2.3.1, 2.2.2 }
    , panic ^>= 0.4
    , parameterized-utils ^>= 2.1.10
    , prettyprinter ^>= 1.7.1
    , safe-exceptions ^>= 0.1.7.4
    , text ^>= { 2.0, 2.1 }
    , transformers ^>= { 0.5.6.2, 0.6.1 }
    , vector ^>= 0.13.2
    , yaml ^>= 0.11

    -- Submodules
    --
    -- No version bounds are needed, as Cabal will always choose the versions
    -- specified in `cabal.project`, namely, the version in the submodule.
    , crucible
    , crucible-debug
    , crucible-llvm
    , crucible-llvm-syntax
    , crucible-symio
    , crucible-syntax
    , elf-edit
    , elf-edit-core-dump
    , llvm-pretty
    , macaw-base
    , macaw-loader
    , macaw-symbolic
    , macaw-symbolic-syntax
    , stubs-common
    , stubs-wrapper
    , galois-dwarf
    , what4

  exposed-modules:
    Grease.Main.Diagnostic
    Grease.AssertProperty
    Grease.BranchTracer
    Grease.BranchTracer.Diagnostic
    Grease.Bug
    Grease.Bug.UndefinedBehavior
    Grease.Concretize
    Grease.Concretize.JSON
    Grease.Concretize.ToConcretize
    Grease.Cursor
    Grease.Cursor.List
    Grease.Cursor.Pointer
    Grease.Diagnostic
    Grease.Diagnostic.Severity
    Grease.Entrypoint
    Grease.Heuristic
    Grease.Heuristic.Diagnostic
    Grease.Heuristic.Result
    Grease.LLVM
    Grease.LLVM.Overrides
    Grease.LLVM.Overrides.Builtin
    Grease.LLVM.Overrides.Declare
    Grease.LLVM.Overrides.Diagnostic
    Grease.LLVM.Overrides.SExp
    Grease.LLVM.SetupHook
    Grease.LLVM.SetupHook.Diagnostic
    Grease.LLVM.SimulatorHooks
    Grease.LLVM.SimulatorHooks.Diagnostic
    Grease.Macaw
    Grease.Macaw.Arch
    Grease.Macaw.Discovery
    Grease.Macaw.Load
    Grease.Macaw.Load.Diagnostic
    Grease.Macaw.Load.Relocation
    Grease.Macaw.Memory
    Grease.Macaw.Overrides
    Grease.Macaw.Overrides.Builtin
    Grease.Macaw.Overrides.SExp
    Grease.Macaw.PLT
    Grease.Macaw.SetupHook
    Grease.Macaw.SimulatorHooks
    Grease.Macaw.SimulatorHooks.Diagnostic
    Grease.Macaw.SimulatorState
    Grease.Macaw.RegName
    Grease.Macaw.ResolveCall
    Grease.Macaw.ResolveCall.Diagnostic
    Grease.Macaw.SkippedCall
    Grease.Macaw.Syscall
    Grease.MustFail
    Grease.Options
    Grease.Output
    Grease.Panic
    Grease.Pretty
    Grease.Refine
    Grease.Refine.Diagnostic
    Grease.Requirement
    Grease.Setup
    Grease.Setup.Annotations
    Grease.Setup.Diagnostic
    Grease.Shape
    Grease.Shape.Concretize
    Grease.Shape.NoTag
    Grease.Shape.Pointer
    Grease.Shape.Selector
    Grease.Shape.Parse
    Grease.Shape.Print
    Grease.Skip
    Grease.Skip.Diagnostic
    Grease.Solver
    Grease.Syntax
    Grease.Syntax.Overrides
    Grease.Syscall
    Grease.Time
    Grease.Utility
    Grease.Version

  autogen-modules:
    Paths_grease
  other-modules:
    Grease.GitRev
    Grease.Macaw.Overrides.Defs
    Paths_grease
